--- a/src/Header.module.css
+++ b/src/Header.module.css
@@ -2,7 +2,7 @@ header {
     display: flex;
     justify-content: space-between;
     position: sticky;
-    top: 0;
+    top: 2em;
 }
 
 .headerLink {
