--- a/src/App.module.css
+++ b/src/App.module.css
@@ -7,3 +7,11 @@
     top: 40vh;
     color: white;
 }
+
+.project {
+    position: absolute;
+    right: -450px;
+    background-color: blue;
+    width: 300px;
+    height: 300px;
+}
