--- a/src/Project.module.css
+++ b/src/Project.module.css
@@ -1,7 +1,31 @@
-.project {
+.card {
     position: absolute;
     right: -450px;
-    background-color: blue;
-    width: 300px;
-    height: 300px;
+    width: 40vw;
+    height: 60vh;
+}
+
+.cardHeader {
+
+}
+
+.cardMedia {
+    height: 40vh;
+}
+
+.titleNDesc {
+    position: absolute;
+    bottom: -10vh;
+    right: -15vw;
+    background-color: rgba(0,0,0,0.2);
+    width: 30vw;
+    border-radius: 20px;
+    color: lightgray;
+}
+
+.img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 20px;
 }
