cardGroup offset is now dynamic

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -7,3 +7,10 @@
     top: 40vh;
     color: white;
 }
+
+.cardGroup {
+    position: absolute;
+    height: 60vh;
+    width: fit-content;
+    display: flex;
+}
